Remove 'AggressiveOpts' jvm-arg (Problem with MacOS)